# stopline_algo

./: README.md
stopline_algo/devel/: .catkin  local_setup.sh
stopline_algo/devel/lib/pkgconfig/: aux_lib.pc  stopline_test.pc
stopline_algo/devel/lib/stopline_test/: stopline_test_iter_node  stopline_test_mpc_node  stopline_test_simple_node
stopline_algo/devel/share/aux_lib/cmake/: aux_libConfig.cmake
stopline_algo/devel/share/stopline_test/cmake/: stopline_testConfig.cmake
stopline_algo/src/aux_lib/: CMakeLists.txt  package.xml
stopline_algo/src/aux_lib/include/aux_lib/: aux_functions.h  clipper.hpp  plot_functions.h  qp_problem.h  st_cell_planner.h  st_utils.h  struct_defs.h
stopline_algo/src/aux_lib/src/: aux_functions.cpp  clipper.cpp  plot_functions.cpp  st_cell_planner.cpp
stopline_algo/src/aux_lib/test/: aux_funcs_unittests.cpp
stopline_algo/src/stopline_test/: CMakeLists.txt  package.xml
stopline_algo/src/stopline_test/src/: main_iter.cpp  main_mpc.cpp  qp_functions.cpp  test.cpp
